--- a/pom.xml
+++ b/pom.xml
@@ -496,5 +496,6 @@
 		<module>cagrid-service-registration</module>
 		<module>cagrid-systest</module>
 		<module>cagrid-trust</module>
+		<module>cagrid-mms</module>
 	</modules>
 </project>
