--- a/cagrid-mms/cagrid-mms-systest/pom.xml
+++ b/cagrid-mms/cagrid-mms-systest/pom.xml
@@ -2,15 +2,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.cagrid</groupId>
-        <artifactId>cagrid-gme</artifactId>
+        <artifactId>cagrid-mms</artifactId>
         <version>2.0.3-SNAPSHOT</version>
     </parent>
-    <artifactId>cagrid-gme-tests</artifactId>
-    <name>caGrid GME Sys Tests</name>
+    <artifactId>cagrid-mms-tests</artifactId>
+    <name>caGrid MMS Sys Tests</name>
 
-    <properties>
-        <db.name>gme</db.name>
-    </properties>
 
     <build>
         <plugins>
@@ -34,53 +31,12 @@
                     </settings>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>sql-maven-plugin</artifactId>
-                <version>1.5</version>
-                <configuration>
-                    <driver>com.mysql.jdbc.Driver</driver>
-                    <url>jdbc:mysql://localhost:3306</url>
-                    <username>root</username>
-                    <password />
-                    <skip>${skipTests}</skip>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.mysql.jdbc</groupId>
-                        <artifactId>com.springsource.com.mysql.jdbc</artifactId>
-                        <version>5.1.6</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>drop-db-before-test</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>execute</goal>
-                        </goals>
-                        <configuration>
-                            <sqlCommand>drop database if exists ${db.name}</sqlCommand>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>create-db</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>execute</goal>
-                        </goals>
-                        <configuration>
-                            <sqlCommand>create database ${db.name}</sqlCommand>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-gme-soap-client</artifactId>
+            <artifactId>cagrid-mms-soap-client</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -90,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>cagrid-gme-api</artifactId>
+            <artifactId>cagrid-mms-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
