[maven-release-plugin] prepare branch cagrid-osgi-2.0.x

--- a/cagrid-cds/cagrid-cds-service/pom.xml
+++ b/cagrid-cds/cagrid-cds-service/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.cagrid</groupId>
@@ -236,8 +235,7 @@
 								<phase>validate</phase>
 								<configuration>
 									<target>
-										<input message="Please enter the grid identity:"
-											addproperty="gridId.input" />
+										<input message="Please enter the grid identity:" addproperty="gridId.input" />
 									</target>
 									<exportAntProperties>true</exportAntProperties>
 								</configuration>
