--- a/cagrid-gaards/pom.xml
+++ b/cagrid-gaards/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.3-SNAPSHOT</version>
+		<version>2.0.3</version>
 	</parent>
 	<artifactId>cagrid-gaards</artifactId>
 	<packaging>pom</packaging>
