[maven-release-plugin] prepare for next development iteration

--- a/cagrid-gridgrouper/cagrid-gridgrouper-systest/pom.xml
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-systest/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.cagrid</groupId>
         <artifactId>cagrid-gridgrouper</artifactId>
-        <version>2.0.3</version>
+        <version>2.0.4-SNAPSHOT</version>
     </parent>
     <artifactId>cagrid-gridgrouper-tests</artifactId>
     <name>caGrid GridGrouper Sys Tests</name>
