--- a/cagrid-cds/cagrid-cds-inttest/pom.xml
+++ b/cagrid-cds/cagrid-cds-inttest/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-cds</artifactId>
-		<version>2.0.3</version>
+		<version>2.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-cds-inttest</artifactId>
 	<name>caGrid CDS Integration Test</name>
