--- a/cagrid-systest/pom.xml
+++ b/cagrid-systest/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cagrid</groupId>
 		<artifactId>cagrid-osgi</artifactId>
-		<version>2.0.3</version>
+		<version>2.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>cagrid-systest</artifactId>
 	<name>caGrid System Test Support</name>
